fixing photo alignment

--- a/cliffsandcalories/css/style.css
+++ b/cliffsandcalories/css/style.css
@@ -78,7 +78,7 @@ a:hover {
 	max-width: 380px;
 	max-height: 500px;
 	padding-bottom: 20px;
-	padding-left:  10px
+	padding-right: 20px
 }
 
 .col-sm-3:hover span.img-caption-text{
